#
# Copyright (c) 2016-2020 Jean Davy
#
# Distributed under the Boost Software License, Version 1.0.
# (See accompanying file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
#
#add_executable(test_not_callable not_callable.cpp)
#add_executable(test_not_configurable not_configurable.cpp)
#add_executable(test_not_dispatchable not_dispatchable.cpp)
#add_executable(test_not_transitional not_transitional.cpp)
